--- a/supplyx.html
+++ b/supplyx.html
@@ -13,7 +13,7 @@
 
         body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            background: linear-gradient(135deg, #0f172a 0%, #1e293b 100%);
+            background: #1e293b;
             color: #e2e8f0;
             min-height: 100vh;
         }
@@ -107,81 +107,77 @@
 
         .grid {
             display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-            gap: 25px;
+            grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
+            gap: 20px;
             margin-top: 30px;
         }
 
         .card {
-            background: rgba(30, 41, 59, 0.8);
-            border-radius: 15px;
-            padding: 20px;
-            border: 1px solid #334155;
+            background: #334155;
+            border-radius: 12px;
+            padding: 0;
+            border: 1px solid #475569;
             transition: all 0.3s ease;
-            backdrop-filter: blur(10px);
+            overflow: hidden;
         }
 
         .card:hover {
-            transform: translateY(-5px);
+            transform: translateY(-2px);
             border-color: #3b82f6;
-            box-shadow: 0 10px 30px rgba(59, 130, 246, 0.2);
+            box-shadow: 0 8px 25px rgba(59, 130, 246, 0.15);
         }
 
         .card-image {
             width: 100%;
-            height: 200px;
-            background: linear-gradient(45deg, #1e293b, #334155);
-            border-radius: 10px;
-            margin-bottom: 15px;
-            overflow: hidden;
+            height: 180px;
+            background: #475569;
+            display: flex;
+            align-items: center;
+            justify-content: center;
             position: relative;
+            overflow: hidden;
         }
 
         .card-image img {
             width: 100%;
             height: 100%;
             object-fit: cover;
-            transition: transform 0.3s ease;
-        }
-
-        .card:hover .card-image img {
-            transform: scale(1.05);
         }
 
         .card-image .placeholder {
-            width: 100%;
-            height: 100%;
-            display: flex;
-            align-items: center;
-            justify-content: center;
             font-size: 3rem;
-            color: #3b82f6;
+            color: #64748b;
+        }
+
+        .card-content {
+            padding: 20px;
         }
 
         .card-title {
-            font-size: 1.3rem;
-            font-weight: bold;
-            margin-bottom: 10px;
+            font-size: 1.25rem;
+            font-weight: 600;
+            margin-bottom: 8px;
             color: #f1f5f9;
         }
 
         .card-price {
-            font-size: 1.5rem;
+            font-size: 1.4rem;
             font-weight: bold;
             color: #10b981;
-            margin-bottom: 10px;
+            margin-bottom: 12px;
         }
 
         .card-stock {
             display: flex;
             align-items: center;
-            margin-bottom: 10px;
+            margin-bottom: 12px;
             color: #94a3b8;
+            font-size: 0.9rem;
         }
 
         .stock-indicator {
-            width: 10px;
-            height: 10px;
+            width: 8px;
+            height: 8px;
             border-radius: 50%;
             margin-right: 8px;
         }
@@ -200,19 +196,19 @@
 
         .card-info {
             color: #94a3b8;
-            font-size: 0.9rem;
-            margin-top: 10px;
+            font-size: 0.85rem;
+            line-height: 1.4;
         }
 
         .tuned-badge {
             display: inline-block;
             background: linear-gradient(45deg, #f59e0b, #eab308);
             color: #000;
-            padding: 4px 12px;
-            border-radius: 20px;
-            font-size: 0.8rem;
+            padding: 4px 10px;
+            border-radius: 12px;
+            font-size: 0.75rem;
             font-weight: bold;
-            margin-top: 10px;
+            margin-bottom: 8px;
         }
 
         .footer {
@@ -354,14 +350,16 @@
                             '<div class="placeholder">🖼️</div>'
                         }
                     </div>
-                    <h3 class="card-title">${item.name}</h3>
-                    <div class="card-price">${price}</div>
-                    <div class="card-stock">
-                        <div class="stock-indicator ${stockStatus}"></div>
-                        ${stockText}
+                    <div class="card-content">
+                        <h3 class="card-title">${item.name}</h3>
+                        <div class="card-price">${price}</div>
+                        <div class="card-stock">
+                            <div class="stock-indicator ${stockStatus}"></div>
+                            ${stockText}
+                        </div>
+                        ${item.tuned ? '<div class="tuned-badge">TUNED</div>' : ''}
+                        <div class="card-info">${item.description}</div>
                     </div>
-                    ${item.tuned ? '<div class="tuned-badge">TUNED</div>' : ''}
-                    <div class="card-info">${item.description}</div>
                 </div>
             `;
         }
@@ -420,11 +418,11 @@
             
             cards.forEach(card => {
                 card.addEventListener('mouseenter', function() {
-                    this.style.transform = 'translateY(-8px) scale(1.02)';
+                    this.style.transform = 'translateY(-2px)';
                 });
                 
                 card.addEventListener('mouseleave', function() {
-                    this.style.transform = 'translateY(0) scale(1)';
+                    this.style.transform = 'translateY(0)';
                 });
             });
         }
